--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
+      rel="stylesheet"
+    />
+
     <title>The house of Beibei</title>
   </head>
 
@@ -49,7 +62,7 @@
 
     <!-- 社交帳號 -->
     <div id="social">
-      <a href="https://twitter.com/cobra_winfrey" target="_blank">
+      <a href="#" target="_blank">
         <svg
           clip-rule="evenodd"
           fill-rule="evenodd"
@@ -99,5 +112,44 @@
     </div>
 
     <!-- 第一幕 -->
+
+    <div id="wrap">
+      <h1 data-splitting="words">BEI - I 149483</h1>
+      <p class="subhead">2023.11.30</p>
+      <div class="panel">
+        <h2 class="dark" data-splitting="words">こ の ま ま 狂 お う ぜ</h2>
+        <div class="thumb">
+          <p>
+            人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
+          </p>
+          <div class="inner"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 進入 -->
+
+    <div id="frame">
+      <div id="close">
+        <div></div>
+        <strong class="circle" data-splitting="chars">GO•BACK•</strong>
+      </div>
+      <div class="frame-wrap">
+        <div class="frame-container">
+          <iframe id="pen" loading="lazy" src="" style="border: 0"></iframe>
+          <a id="penlink" target="_blank"
+            ><strong>SEE•MORE• <span>&rarr;</span></strong></a
+          >
+        </div>
+      </div>
+    </div>
+
+    <!-- <h1>LCD TEXT.</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis amet
+      possimus non, ratione nobis reprehenderit repellendus sit labore ut
+      assumenda. Minima, quo vel sequi sint, architecto soluta pariatur maiores
+      nemo?
+    </p> -->
   </body>
 </html>
