--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <script defer src="js/sprite.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
@@ -30,6 +31,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
       rel="stylesheet"
+    />
+
+    <meta
+      name="viewport"
+      content="width=device-width, 
+  initial-scale=1.0"
     />
 
     <title>The house of Beibei</title>
