--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 
+    <!-- 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Chakra+Petch&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
       rel="stylesheet"
@@ -45,7 +48,7 @@
   <!-- 內文 -->
 
   <body>
-    <!-- 屬標 -->
+    <!-- 鼠標 -->
     <div id="cursor">
       <strong class="circle" data-splitting="chars">SEE•MORE•</strong>
     </div>
@@ -125,6 +128,7 @@
       <p class="subhead">2023.11.30</p>
       <div class="panel">
         <h2 class="dark" data-splitting="words">こ の ま ま 狂 お う ぜ</h2>
+        <img src="img/try-1.png" class="img-1" />
         <div class="thumb">
           <p>
             人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
@@ -143,14 +147,19 @@
       </div>
       <div class="frame-wrap">
         <div class="frame-container">
-          <iframe id="pen" loading="lazy" src="" style="border: 0"></iframe>
+          <!-- <iframe id="pen" loading="lazy" src="" style="border: 0"></iframe> -->
           <a id="penlink" target="_blank"
             ><strong>SEE•MORE• <span>&rarr;</span></strong></a
           >
         </div>
       </div>
     </div>
-
+    <div id="wrap">
+      <div class="container text-center" id="find">
+        <span class="subheading">ABOUT</span>
+        <h2 class="heading-secondary">關於</h2>
+      </div>
+    </div>
     <!-- <h1>LCD TEXT.</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis amet
