--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
     <!-- 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,6 +39,11 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:900"
       rel="stylesheet"
     />
 
@@ -155,11 +166,180 @@
       </div>
     </div>
     <div id="wrap">
-      <div class="container text-center" id="find">
-        <span class="subheading">ABOUT</span>
-        <h2 class="heading-secondary">關於</h2>
+      <div class="title">
+        <div class="container text-center" id="find">
+          <span class="subheading">NEW</span>
+          <h2 class="heading-secondary">最新消息</h2>
+        </div>
+      </div>
+      <!-- 票卡 -->
+      <div class="container-1">
+        <div class="ticket-card inner">
+          <h2>North</h2>
+          <i class="fas fa-arrow-right"></i>
+          <p>a lonely trip.</p>
+          <div class="pic"></div>
+          <ul>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+          </ul>
+          <div class="ticket-social">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-github"></i>
+          </div>
+          <button></button>
+        </div>
+        <div class="ticket-card ticket-card2 inner">
+          <h2>Vauxhall</h2>
+          <i class="fas fa-arrow-right"></i>
+          <p>a lonely trip.</p>
+          <div class="pic"></div>
+          <ul>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+            <li class="ticket-li"></li>
+          </ul>
+          <div class="ticket-social">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-github"></i>
+          </div>
+          <button></button>
+        </div>
+      </div>
+
+      <a href="https://dribbble.com/YancyMin" class="dr-url" target="_blank"
+        ><img
+          class="dr"
+          src="https://cdn.dribbble.com/assets/logo-footer-hd-a05db77841b4b27c0bf23ec1378e97c988190dfe7d26e32e1faea7269f9e001b.png"
+          alt=""
+      /></a>
+    </div>
+
+    <!-- 票卡 -->
+    <div class="container">
+      <div class="card">
+        <h2>North</h2>
+        <i class="fas fa-arrow-right"></i>
+        <p>a lonely trip.</p>
+        <div class="pic"></div>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="social">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-github"></i>
+        </div>
+        <button></button>
+      </div>
+      <div class="card card2">
+        <h2>Vauxhall</h2>
+        <i class="fas fa-arrow-right"></i>
+        <p>a lonely trip.</p>
+        <div class="pic"></div>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="social">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-github"></i>
+        </div>
+        <button></button>
       </div>
     </div>
+
     <!-- <h1>LCD TEXT.</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis amet
