--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
     <meta
       name="viewport"
       content="width=device-width, 
@@ -145,6 +150,7 @@
             人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
           </p>
           <div class="inner"></div>
+          <p class="about">ABOUT</p>
         </div>
       </div>
     </div>
@@ -165,13 +171,13 @@
         </div>
       </div>
     </div>
-    <div id="wrap">
-      <div class="title">
-        <div class="container text-center" id="find">
-          <span class="subheading">NEW</span>
-          <h2 class="heading-secondary">最新消息</h2>
-        </div>
+    <div class="title">
+      <div class="container text-center" id="find">
+        <span class="subheading">NEW</span>
+        <h2 class="heading-secondary">最新消息</h2>
       </div>
+    </div>
+    <div id="wrap">
       <!-- 票卡 -->
       <div class="container-1">
         <div class="ticket-card inner">
