--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div id="wrap">
       <h1 data-splitting="words">BEI - I 149483</h1>
-      <p class="subhead">2023.11.30</p>
+      <p class="subhead">2023.12.07</p>
       <div class="panel">
         <h2 class="dark" data-splitting="words">こ の ま ま 狂 お う ぜ</h2>
         <img src="img/try-1.png" class="img-1" />
@@ -153,6 +153,21 @@
           <p class="about">ABOUT</p>
         </div>
       </div>
+
+      <div class="panel">
+        <h2 class="dark" data-splitting="words">GO HOME</h2>
+        <img src="img/pixel/wiki_with_cake.gif" class="img-2" />
+        <div class="thumb">
+          <p>
+            人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
+          </p>
+          <div class="inner"></div>
+          <p class="house">My house</p>
+        </div>
+      </div>
+
+      <h1 data-splitting="words">NEW</h1>
+      <p class="subhead">2023.12.07</p>
     </div>
 
     <!-- 進入 -->
@@ -171,99 +186,96 @@
         </div>
       </div>
     </div>
+
     <div class="title">
       <div class="container text-center" id="find">
         <span class="subheading">NEW</span>
         <h2 class="heading-secondary">最新消息</h2>
       </div>
     </div>
-    <div id="wrap">
+
+    <div id="wrap-1">
       <!-- 票卡 -->
-      <div class="container-1">
-        <div class="ticket-card inner">
-          <h2>North</h2>
-          <i class="fas fa-arrow-right"></i>
-          <p>a lonely trip.</p>
-          <div class="pic"></div>
-          <ul>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-          </ul>
-          <div class="ticket-social">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-github"></i>
+      <div class="ticket">
+        <div class="container-1">
+          <div class="ticket-card inner-1">
+            <h2>North</h2>
+            <i class="fas fa-arrow-right"></i>
+            <p>a lonely trip.</p>
+            <div class="pic"></div>
+            <ul>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+            </ul>
+            <div class="ticket-social">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-github"></i>
+            </div>
+            <button></button>
           </div>
-          <button></button>
-        </div>
-        <div class="ticket-card ticket-card2 inner">
-          <h2>Vauxhall</h2>
-          <i class="fas fa-arrow-right"></i>
-          <p>a lonely trip.</p>
-          <div class="pic"></div>
-          <ul>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-            <li class="ticket-li"></li>
-          </ul>
-          <div class="ticket-social">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-github"></i>
+          <div class="ticket-card ticket-card2 inner-1">
+            <h2>Commission</h2>
+            <i class="fas fa-arrow-right"></i>
+            <p>money & money.</p>
+            <div class="pic"></div>
+            <ul>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+              <li class="ticket-li"></li>
+            </ul>
+            <div class="ticket-social">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-github"></i>
+            </div>
+            <button></button>
           </div>
-          <button></button>
         </div>
       </div>
-
-      <a href="https://dribbble.com/YancyMin" class="dr-url" target="_blank"
-        ><img
-          class="dr"
-          src="https://cdn.dribbble.com/assets/logo-footer-hd-a05db77841b4b27c0bf23ec1378e97c988190dfe7d26e32e1faea7269f9e001b.png"
-          alt=""
-      /></a>
     </div>
 
     <!-- 票卡 -->
