--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
+    <!-- <link rel="stylesheet" href="css/dice.css" /> -->
     <script defer src="js/sprite.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
@@ -19,7 +20,18 @@
     <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Comfortaa"
+      rel="stylesheet"
+    />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -88,6 +100,14 @@
 
     <!-- 社交帳號 -->
     <div id="social">
+      <div class="menu__wrapper">
+        <div class="menu__item--doner" tabindex="2">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </div>
+
       <a href="#" target="_blank">
         <svg
           clip-rule="evenodd"
@@ -157,6 +177,7 @@
       <div class="panel">
         <h2 class="dark" data-splitting="words">GO HOME</h2>
         <img src="img/pixel/wiki_with_cake.gif" class="img-2" />
+
         <div class="thumb">
           <p>
             人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
