--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
       <p class="subhead">2023.12.07</p>
       <div class="panel">
         <h2 class="dark" data-splitting="words">こ の ま ま 狂 お う ぜ</h2>
-        <img src="img/try-1.png" class="img-1" />
+        <img src="img/try-sh.png" class="img-1-1" />
+        <img src="img/try-5.png" class="img-1" />
         <div class="thumb">
           <p>
             人類社会のすべての構成員の固有の尊厳と平等で譲ることのできない権利とを承認することは
@@ -200,6 +201,8 @@
       </div>
       <div class="frame-wrap">
         <div class="frame-container">
+          <!-- <img src="img/try-5.png" class="img-1" /> -->
+
           <!-- <iframe id="pen" loading="lazy" src="" style="border: 0"></iframe> -->
           <a id="penlink" target="_blank"
             ><strong>SEE•MORE• <span>&rarr;</span></strong></a
@@ -295,6 +298,9 @@
             </div>
             <button></button>
           </div>
+        </div>
+        <div class="back-2">
+          <img src="img/back-2.png" class="img-back-2" />
         </div>
       </div>
     </div>
